# verticaextractor

./: .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  IDEAS.md  README.md  docker-compose.yml
.github/workflows/: rust.yml
data/sql/: table-all-types.sql
etc/: all-data-types.txt
scripts/: build  rename-binary  test  verticactl
src/: column_type.rs  encoding.rs  errors.rs  lib.rs  main.rs  sql_data_type.rs
src/sql/: get_column_definitions.sql  select_all.sql
tests/: cucumber.yml
tests/features/: basic.feature
tests/features/step_definitions/: eventually_helper.rb  vertica_steps.rb
vertica/: Dockerfile  docker-entrypoint.sh
