[package]
name = "verticaextractor"
version = "0.1.3"
authors = ["Joey Gibson <joey@joeygibson.com>"]
edition = "2018"
description = "A program to extract data from Vertica tables, and write out native binary files."
readme = "README.md"
repository = "https://github.com/joeygibson/verticaextractor"
license = "MIT"
keywords = ["vertica", "database", "csv", "binary"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
chrono = "0.4"
csv = "1.1"
regex = "1"
lazy_static = "1.4.0"
odbc = "0.17.0"
rpassword = "4.0.5"
colored = "1.9"
